@@ -1,1 +1,1 @@
-1.8.19.0-rc3
+1.8.19.0
